# rust_accel

./: README.md  TODO.md  compose.override.yml  compose.yml  docker.sh
auth-service/: Cargo.toml  Dockerfile  test.sh
auth-service/.sqlx/: query-903f5c3cdc3a1226363ef085aed74acf7fd31bf27b1318393d239e04e910e619.json  query-a8039ecb18bc9eef0f51656c8fd93df3622bab15ca193f9293d87536d8b2b3f6.json
auth-service/migrations/: 20250826164927_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
